--- a/sass/features.scss
+++ b/sass/features.scss
@@ -19,6 +19,7 @@
     justify-content: center;
     flex-direction: column;
     padding: 12rem;
+
     @media screen and (max-width: $bp-medium) {
       align-items: center;
       justify-content: center;
@@ -26,6 +27,9 @@
     }
     @media screen and (max-width: $bp-smallest) {
       padding: 5rem;
+    }
+    @media screen and (max-width: $bp-iphone14) {
+      font-size: 1.7rem;
     }
   }
 
@@ -35,11 +39,12 @@
     line-height: 1.4;
     @media screen and (max-width: $bp-medium) {
       font-size: 2rem;
+      line-height: 1.4;
     }
     color: $VeryDarkdesaturatedblue;
     @media screen and (max-width: $bp-small) {
       font-size: 2.4rem;
-      line-height: 1;
+      line-height: 1.4;
     }
   }
 
