--- a/sass/testimonials.scss
+++ b/sass/testimonials.scss
@@ -27,6 +27,9 @@
       font-size: 2.4rem;
       line-height: 1.2;
     }
+    @media screen and (max-width: $bp-iphone14) {
+      font-size: 2rem;
+    }
   }
 
   &__info {
